backend/demo/src/main/java/com/example/demo/error/DuplicateException.java
package com.example.demo.error;


public class DuplicateException extends RuntimeException {

	public DuplicateException(String message) {
		super(message);
	}
}
